fix: make Help button and hyperlinks work on macOS and Linux
- Use java.awt.Desktop.browse() for cross-platform URL opening
- Add fallback to OS-specific commands (open, xdg-open, rundll32)
- Update Help button URL to https://wiki.anidb.net/WebAOM